fixed missing padding

--- a/src/components/style-gridDisplay.css
+++ b/src/components/style-gridDisplay.css
@@ -9,7 +9,7 @@ article .activity-list {
 }
 
 article .activity-list li {
-  padding: ;
+  padding: 0;
 }
 
 article .activity-list .preview {
